; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/zlib/contrib/untgz/extr_untgz.c_setfiletime.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/zlib/contrib/untgz/extr_untgz.c_setfiletime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utimbuf = type { i32, i32 }

@FILE_FLAG_BACKUP_SEMANTICS = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@OPEN_EXISTING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setfiletime(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.utimbuf, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = getelementptr inbounds %struct.utimbuf, %struct.utimbuf* %5, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = getelementptr inbounds %struct.utimbuf, %struct.utimbuf* %5, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @utime(i8* %9, %struct.utimbuf* %5)
  ret i32 %10
}

declare dso_local i32 @utime(i8*, %struct.utimbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
